--- a/static/faq.html
+++ b/static/faq.html
@@ -18,35 +18,36 @@
       <section style="background-image: url(images/faq.jpg);" class="top-image">
         <nav class="navbar navbar-expand-lg navbar-transparent">
           <div class="container">
-          <div class="row">
-              <div class="col-md-12"></div>
-          </div>
-          <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
-              <ul class="navbar-nav mx-auto">
-              <li class="nav-item px-3">
-                  <a class="nav-link" href="index.html">Our Solution</a>
-              </li>
-              <li class="nav-item dropdown px-3">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Pillars
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
-                <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
-                <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
-                <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+            <div class="row">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="index.html">Our Solution</a>
+                </li>
+                <li class="nav-item dropdown px-3">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pillars
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                  <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                  <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                  <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item"><a href="index.html" class="nav-link px-3 text-muted"><img src="images/logo.png" alt="Logo" style="height: 2rem;"></a></li>
+                <li class="nav-item px-3">
+                  <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                </li>
                 </ul>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
-              </li>
-              <li class="nav-item px-3">
-                  <a class="nav-link" href="faq.html">FAQ</a>
-              </li>
-              </ul>
+            </div>
           </div>
-          </div>
-      </nav>
+        </nav>
         <div class="jumbotron jumbotron-fluid">
           
           <!-- frequently asked questions -->
@@ -166,19 +167,19 @@
      <div class="container">
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-3 text-muted"></a></li>
             <li class="nav-item"><a href="index.html" class="nav-link px-3 text-muted">Our Solution</a></li>
             <li class="nav-item dropdown text-muted">
                 <a class="nav-link px-3 dropdown-toggle text-muted" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Pillars
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
-                <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
-                <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
-                <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+                  <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                  <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                  <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                  <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
                 </ul>
             </li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-3 text-muted"><img src="images/logo.png" alt="Logo" style="height: 2rem;"></a></li>
             <li class="nav-item"><a href="entrepreneurs.html" class="nav-link px-3 text-muted">Entrepreneurs</a></li>
             <li class="nav-item"><a href="faq.html" class="nav-link px-3 text-muted">FAQ</a></li>
           </ul>
