--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -50,7 +50,7 @@
           </div>
       </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url('construction.jpeg'); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url('images/construction.jpg'); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-1">Construction-Stored Carbon</h1>
                 <p class="lead">Key for storing carbon dioxide</p>
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="greenroof.jpg" class="card-img-top" alt="...">
+            <img src="images/greenroof.jpg" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-book-reader"></i>
             </div>
@@ -103,7 +103,7 @@
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="https://www.pexels.com/zh-cn/photo/139198/" class="card-img-top" alt="...">
+            <img src="images/solarpanel.jpg" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-calendar-edit"></i>
             </div>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="shorelines.jpg" class="card-img-top" alt="...">
+            <img src="images/shorelines.jpg" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-Constructionscape"></i>
             </div>
