--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Nature based solutions</title>
+        <title>Nature Based Solutions</title>
+        <link rel="icon" href="images/logo.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
         <style>
             .nav-item{
@@ -51,7 +52,7 @@
 
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-1 title">Harness Nature to Address <br> Climate Change</h1>
-                <p class="lead">Maybe the future isn't all smokestacks and screens?</p>
+                <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
             </div>
 
             <div class="waveTrans" id="waveTrans1" style="--i:1; background-image: url(images/wave.png);"></div>
@@ -60,22 +61,34 @@
             <div class="waveTrans" id=waveTrans4 style="--i:4; background-image: url(images/wave.png);"></div>
         </section>
         <!-- content of landing page -->
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <img width="100" height="100" style="margin-bottom: 20px;" src="images/logo.png"></img>
+            <h1 class="text-body-emphasis">What are nature based solutions?</h1>
+            <p class="col-lg-8 mx-auto fs-5 text-muted">
+                Nature based solutions (or NBS) are actions to <strong>protect, sustainably manage and restore</strong> both natural ecosystems and modified ecosystems. Addressing societal challenges effectively and adaptively, simultaneously <strong>benefiting people and nature.</strong>
+            </p>
+        </div>
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <h1 class="text-body-emphasis">The four pillars</h1>
+            <p class="col-lg-8 mx-auto fs-5 text-muted">
+                We have divided nature based solutions into <strong>four</strong> pillars. Each one represents a specific area in which entrepreneurs work and develop solutions to capture carbon in line with nature. You can read about them below or click on <strong>Pillars</strong> in the navigation bar.
+            </p>
+        </div>
+
+
         <div class="container my-5 land section">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-5 border shadow-lg">
               <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1">Land-Stored Carbon</h1>
-                <p class="lead">Land-stored carbon refers to carbon dioxide absorbed and retained by terrestrial ecosystems like forests, grasslands, and wetlands. These natural reservoirs play a crucial role in mitigating climate change by capturing carbon from the atmosphere. Protecting and restoring these ecosystems is essential for maintaining carbon balance and combating global warming.</p>
+                <p class="lead">Soil, forests and wetlands are major natural carbon sinks. Planting mangroves, using existing agricultural infrastructure or biochar to store carbon is a great way to sequester it from the atmosphere and make the world more liveable.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">   
                     <a href="pillar-land.html">
                     <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Read more</button>
                 </a>
-                <a href="#">
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Some other button</button>
-                </a>
                 </div>
               </div>
               <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden m-5">
-                  <img class="rounded-4" src="images/land-stored-bg.jpg" alt="" width="400" height="400">
+                  <img class="rounded-4" src="images/field.jpg" alt="" width="400" height="400">
               </div>
             </div>
         </div>
@@ -87,13 +100,10 @@
                 </div>
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                     <h1 class="display-4 fw-bold lh-1">Ocean-Stored Carbon</h1>
-                    <p class="lead">Ocean-stored carbon refers to carbon dioxide absorbed and stored in the world's oceans. Marine organisms like phytoplankton play a vital role by absorbing CO2 during photosynthesis. Additionally, oceanic processes like carbonate chemistry and sedimentation contribute to carbon storage. These mechanisms help regulate atmospheric CO2 levels, impacting global climate dynamics.</p>
+                    <p class="lead">The IPCC estimates our oceans can store 11 gigatons of carbon! Solutions in this pillar include seaweed, seagrass, oysters, biomass sinking, and much more. The potential for sequestering carbon in this huge natural carbon sink is endless.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                         <a href="pillar-ocean.html">
                             <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Read more</button>
-                        </a>
-                        <a href="#">
-                          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Some other button</button>
                         </a>
                     </div>
                 </div>
@@ -105,13 +115,10 @@
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-5 border shadow-lg">
               <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1">Rock-Stored Carbon</h1>
-                <p class="lead">Rock-stored carbon refers to the process where certain types of rocks, such as limestone, naturally absorb carbon dioxide from the atmosphere through a process called carbonation. Over time, this captured carbon becomes integrated into the rock formations, effectively sequestering it from the atmosphere and aiding in carbon cycle regulation.</p>
+                <p class="lead">Carbon can be sequestered from our atmosphere through advanced weathering of rocks and minerals, like olivine. Carbon can essentially be injected into rocks where it remains, incredibly stable and safe, and away from the air we breathe!</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                     <a href="pillar-rock.html">
                         <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Read more</button>
-                    </a>
-                    <a href="#">
-                      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Some other button</button>
                     </a>
                 </div>
               </div>
@@ -128,13 +135,10 @@
                 </div>
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                     <h1 class="display-4 fw-bold lh-1">Construction-Stored Carbon</h1>
-                    <p class="lead">Construction materials, notably concrete, can contribute to carbon storage through carbon capture and utilization (CCU). In this process, CO2 emissions from industrial sources are captured and incorporated into concrete, effectively sequestering carbon. Utilizing such materials helps mitigate climate change by reducing the carbon footprint associated with construction activities.</p>
+                    <p class="lead">Sustainable techniques and materials in construction, like green spaces or biobased materials can help store carbon away from our atmosphere, in our buildings and infrastructure. With changing the way we build our homes, we can be more inclusive towards nature.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                         <a href="pillar-construction.html">
                             <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Read more</button>
-                        </a>
-                        <a href="#">
-                          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Some other button</button>
                         </a>
                     </div>
                 </div>
@@ -146,10 +150,16 @@
         <br>
         <br>
         
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/mountain.jpg); background-size: cover; background-position: center center; height: 70vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/landing-bottom-banner.jpg); background-size: cover; background-position: center center; height: 70vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-1 big">What can I do?</h1>
-                <p class="lead">Start your own NBS business.</p>
+                <ul>
+                    <li class="list-group-item" style="color: #4a4b4f;">Start your own NBS business.</li>
+                    <li class="list-group-item" style="color: #4a4b4f;">Join an existing NBS company.</li>
+                    <li class="list-group-item" style="color: #4a4b4f;">Invest in NBS initiatives.</li>
+                    <li class="list-group-item" style="color: #4a4b4f;">Support organizations and policies working on NBS projects.</li>
+                </ul>
+            </div>
             </div>
         </div>
         <div class="divider"></div>
